working with selecting number of grids and mouse over changing colors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="app.js" defer></script>
   </head>
   <body>
+    <div class="header">
+      Number of squares per side:<input
+        type="text"
+        class="squares-input"
+      /><input type="submit" value="Submit" class="submit" />
+    </div>
+
     <div class="root"></div>
   </body>
 </html>
